# ennector

./: .gitignore  Anchor.toml  README.org  copyIdl.js  package.json
app/: idl.json  package.json
app/components/: AccountCard.tsx  Airdrop.tsx  ClearData.tsx  CreateNewProject.tsx  CreatedProjects.tsx  ExploreProjects.tsx  InvestNewProject.tsx  InvestedProjects.tsx  LinkButton.tsx  Navbar.tsx  ProjectCard.tsx  ProjectList.tsx
app/pages/: _app.tsx  index.tsx
app/pages/api/: clearData.ts  daos.ts  movies.js  submitProposal.ts
app/pages/api/checkProject/: [treasuryAccount].tsx  [treasuryKey].ts  index.ts
app/pages/api/findProjects/: [creator].tsx  [walletKey].ts  index.ts
app/pages/create/: NewProject.tsx  index.tsx
app/pages/creators/: NewProject.tsx  index.tsx
app/pages/explore/: [treasuryAccountRoute].tsx  [treasuryAccount].tsx  [treasuryKey].tsx  index.tsx
app/pages/explore/[treasuryAccountRoute]/: Contributors.tsx  index.tsx
app/pages/home/: index.tsx
app/pages/invest/: index.tsx
app/styles/: globals.css
app/utils/: mongodb.ts  provider.ts
programs/ennector/: Cargo.toml
programs/ennector/src/: lib.rs
programs/primal/: Cargo.toml
programs/primal/src/: lib.rs
tests/: ennector.ts  primal.ts
