[package]
name = "primal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "primal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.22.0", features = ["init-if-needed"]}
solana-program = "1.10.0"
anchor-spl = "0.22.0"
rust_decimal = "1.22"   
rust_decimal_macros = "1.22"